@@ -1,6 +1,9 @@
 Revision history for Perl extension Web-Library
 
 {{$NEXT}}
+    [Improvements]
+        - Now works for Dist::Milla-based distribution wrappers that don't have
+          a Makefile.PL but a dist.ini
 
 0.04  2013-08-11 19:28:19 CEST
     - first release with Dist::Milla
